Several minimal optimizations